--- a/src/components/common/Card/Card.module.css
+++ b/src/components/common/Card/Card.module.css
@@ -1,15 +1,19 @@
 .container {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1rem;
-    margin: 1rem 0;
+    padding: 0;
+    margin: 30px 0;
     border-radius: 12px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     transition: transform 0.3s;
-    background-color: #C9DF38;
-    width: 50%;
+    width: 100%;
+    border-color: gray;
+    border-width: 6px;
+    border-style: groove;
+    box-shadow: 0px 4px 25px rgba(168, 201, 36, 0.5);
+    overflow: hidden;
 }
 
 .container:hover {
@@ -18,13 +22,19 @@
 
 .image {
     width: 100%;
-    height: 200px;
-    object-fit: cover;
-    border-radius: 8px;
+    height: 400px;
+    object-fit: fill;
 }
 
 .title {
-    margin-top: 1rem;
-    font-size: 1.5rem;
-    color: #333;
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    padding: 6px 10px;
+    font-size: 30px;
+    font-weight: bold;
+    border-radius: 5px;
+    width: auto;
 }
