--- a/src/pages/Categories/Categories.module.css
+++ b/src/pages/Categories/Categories.module.css
@@ -1,10 +1,32 @@
 .container {
-    padding: 2rem;
-    overflow-y: auto;
-    height: 100vh;
+    text-align: center;
+    padding: 30px;
     background-image: url('/src/assets/images/background_white.jpg');
     background-size: cover;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.categoryContainer {
+    width: 90%;
+    max-width: 1200px;
+    padding: 30px;
+    background-color: rgba(255, 255, 255, 0.6);
+    border-radius: 20px;
+    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.title {
+    font-size: 75px;
+    font-weight: bold;
+    color: #D9542B;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 40px;
+    box-shadow: 0px 4px 20px rgba(217, 84, 43, 0.8);
 }
