--- a/src/components/layout/MainLayout/MainLayout.module.css
+++ b/src/components/layout/MainLayout/MainLayout.module.css
@@ -3,3 +3,33 @@
     flex-direction: column;
     min-height: 100vh;
 }
+
+.content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.footer {
+    width: 100%;
+    margin-top: auto;
+}
+
+.videoContainer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+.video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
