--- a/src/pages/Details/Details.module.css
+++ b/src/pages/Details/Details.module.css
@@ -1,11 +1,10 @@
 /* Contenedor principal */
 .container {
+    width: 100%;
+    padding: 2rem;
     text-align: center;
-    padding: 30px;
-    background-image: url('/images/background_white.avif');
-    background-size: cover;
-    min-height: 100vh;
     display: flex;
+    flex: 1;
     flex-direction: column;
     align-items: center;
 }
