--- a/src/components/layout/MainLayout/MainLayout.module.css
+++ b/src/components/layout/MainLayout/MainLayout.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    background-image: url('/images/background_white.avif');
 }
 
 .content {
@@ -15,6 +16,7 @@
     margin-top: auto;
 }
 
+/* Inactividad */
 .videoContainer {
     visibility: hidden;
     position: fixed;
