--- a/src/pages/PaymentOptions/PaymentOptions.module.css
+++ b/src/pages/PaymentOptions/PaymentOptions.module.css
@@ -1,9 +1,10 @@
 .container {
+    width: 100%;
+    padding: 2rem;
     text-align: center;
-    padding: 30px;
-    background-color: #f5f5f5;
-    min-height: 100vh;
+    background-color: #EDEDED;
     display: flex;
+    flex: 1;
     flex-direction: column;
     align-items: center;
 }
