--- a/src/pages/ThankYouPage/ThankYouPage.module.css
+++ b/src/pages/ThankYouPage/ThankYouPage.module.css
@@ -1,13 +1,15 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+    width: 100%;
+    padding: 2rem;
     text-align: center;
     background: linear-gradient(to bottom, #A8C924, #6E9522);
     color: white;
-    padding: 2rem;
+    box-sizing: border-box;
+    justify-content: center;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .logo {
