--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,10 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Rubik-Variable', sans-serif;
 }
   
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Rubik-Variable', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
