--- a/src/components/common/MosaicoCard/MosaicoCard.module.css
+++ b/src/components/common/MosaicoCard/MosaicoCard.module.css
@@ -37,7 +37,7 @@
 .mainImage {
     width: 40%;
     height: 100%;
-    object-fit: cover; /* Cambiado de fill a cover para mejor aspecto */
+    object-fit: fill; /* Cambiado de fill a cover para mejor aspecto */
     border-radius: 8px 0 0 8px;
 }
 
@@ -51,7 +51,7 @@
 .sideImage {
     width: 100%;
     height: 50%;
-    object-fit: cover; /* Cambiado de fill a cover para mejor aspecto */
+    object-fit: fill; /* Cambiado de fill a cover para mejor aspecto */
     border-radius: 0 8px 0 0;
 }
 
@@ -68,4 +68,70 @@
     width: auto;
     font-family: 'Montserrat', sans-serif;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); /* Sombra sutil para el título */
+}
+
+@media screen and (max-width: 1024px) {
+    .imageGrid {
+        height: 300px;
+    }
+
+    .mainImage {
+        width: 45%;
+    }
+
+    .sideImages {
+        width: 55%;
+    }
+
+    .title {
+        font-size: 24px;
+        padding: 6px 10px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .imageGrid {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .mainImage {
+        width: 100%;
+        height: 200px;
+        border-radius: 8px 8px 0 0;
+    }
+
+    .sideImages {
+        width: 100%;
+        flex-direction: row;
+        height: 200px;
+    }
+
+    .sideImage {
+        width: 50%;
+        height: 100%;
+        border-radius: 0 0 0 0;
+    }
+
+    .title {
+        font-size: 20px;
+        padding: 6px 10px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .container {
+        margin: 20px 0;
+        border-width: 4px;
+    }
+
+    .mainImage,
+    .sideImage {
+        height: 150px;
+    }
+
+    .title {
+        font-size: 18px;
+        padding: 5px 8px;
+    }
 }
