--- a/src/pages/Categories/Categories.module.css
+++ b/src/pages/Categories/Categories.module.css
@@ -55,3 +55,41 @@
     background-color: #E74C3C; /* Rojo para hover */
     transform: scale(1.05);
 }
+
+@media (max-width: 768px) {
+    .container {
+        padding: 1rem;
+    }
+
+    .categoryContainer {
+        width: 100%;
+        padding: 20px;
+        border-radius: 15px;
+        box-shadow: 0px 3px 10px rgba(44, 62, 80, 0.1);
+    }
+
+    .title {
+        font-size: 40px;
+        margin-bottom: 20px;
+        box-shadow: none;
+    }
+
+    .backButton {
+        padding: 12px 20px;
+        font-size: 20px;
+        top: 10px;
+        left: 10px;
+        border-radius: 8px;
+    }
+}
+
+@media (max-width: 480px) {
+    .title {
+        font-size: 30px;
+    }
+
+    .backButton {
+        font-size: 18px;
+        padding: 10px 16px;
+    }
+}
