--- a/src/pages/PaymentOptions/PaymentOptions.module.css
+++ b/src/pages/PaymentOptions/PaymentOptions.module.css
@@ -87,3 +87,37 @@
     background-color: #E74C3C; /* Rojo anaranjado */
     transform: scale(1.05);
 }
+
+@media screen and (max-width: 768px) {
+    .title {
+        font-size: 28px;
+        margin-bottom: 40px;
+    }
+
+    .subtitle {
+        font-size: 22px;
+        margin-top: 40px;
+    }
+
+    .userData {
+        width: 100%;
+        padding: 15px;
+    }
+
+    .userData p {
+        font-size: 16px;
+    }
+
+    .qrContainer {
+        margin-top: 40px;
+    }
+
+    .qrLabel {
+        font-size: 18px;
+    }
+
+    .continueButton {
+        font-size: 1rem;
+        padding: 10px 16px;
+    }
+}
