--- a/src/pages/ThankYouPage/ThankYouPage.module.css
+++ b/src/pages/ThankYouPage/ThankYouPage.module.css
@@ -59,3 +59,30 @@
         transform: translateY(-10px);
     }
 }
+
+@media screen and (max-width: 768px) {
+    .logo {
+        width: 100px;
+        margin-bottom: 0.8rem;
+    }
+
+    .message {
+        font-size: 1.5rem;
+        margin-bottom: 0.8rem;
+        text-align: center;
+    }
+
+    .subMessage {
+        font-size: 1rem;
+        text-align: center;
+    }
+
+    .thankYouIcon {
+        font-size: 2.5rem;
+        margin-bottom: 60px;
+    }
+
+    .container {
+        padding: 1.5rem;
+    }
+}
